--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,6 @@
-[submodule "carma"]
-    path = extern/carma
-    url = https://github.com/rurlus/carma.git
-    branch = stable
+[submodule "extern/pybind11"]
+	path = extern/pybind11
+	url = https://github.com/pybind/pybind11
+[submodule "extern/armadillo-code"]
+	path = extern/armadillo-code
+	url = https://gitlab.com/conradsnicta/armadillo-code.git
