--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "extern/pybind11"]
 	path = extern/pybind11
 	url = https://github.com/pybind/pybind11
-[submodule "extern/armadillo-code"]
-	path = extern/armadillo-code
+[submodule "extern/armadillo"]
+	path = extern/armadillo
 	url = https://gitlab.com/conradsnicta/armadillo-code
